--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -48,6 +48,7 @@
         <file>schema/individual_measurements/v0.3.1.xsd</file>
         <file>schema/individual_measurements/v0.3.2.xsd</file>
         <file>schema/individual_measurements/v0.3.3.xsd</file>
+        <file>schema/individual_measurements/v0.4.0.xsd</file>
         <file>schema/label_template/v1.0.0.xsd</file>
     </qresource>
 </RCC>
