Dialog Final measurements.
--HG--
branch : feature

--- a/src/app/valentina/mainwindow.ui
+++ b/src/app/valentina/mainwindow.ui
@@ -1699,12 +1699,16 @@
     </property>
     <addaction name="actionOpenTape"/>
     <addaction name="actionEditCurrent"/>
+    <addaction name="separator"/>
     <addaction name="actionUnloadMeasurements"/>
     <addaction name="actionLoadIndividual"/>
     <addaction name="actionLoadMultisize"/>
     <addaction name="actionSyncMeasurements"/>
+    <addaction name="separator"/>
     <addaction name="actionTable"/>
     <addaction name="actionExportIncrementsToCSV"/>
+    <addaction name="separator"/>
+    <addaction name="actionFinalMeasurements"/>
    </widget>
    <widget class="QMenu" name="menuWindow">
     <property name="title">
@@ -2649,6 +2653,9 @@
    </property>
   </action>
   <action name="actionExportIncrementsToCSV">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Export increments to CSV</string>
    </property>
@@ -2657,6 +2664,9 @@
    </property>
   </action>
   <action name="actionZoomFitBestCurrent">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Zoom fit best current</string>
    </property>
@@ -2675,6 +2685,14 @@
     <string>Label template editor</string>
    </property>
   </action>
+  <action name="actionFinalMeasurements">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Final measurements</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -2685,8 +2703,8 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="share/resources/toolicon.qrc"/>
   <include location="../../libs/vmisc/share/resources/icon.qrc"/>
+  <include location="share/resources/toolicon.qrc"/>
  </resources>
  <connections/>
 </ui>
