Abort export if cannot retrive a value.
--HG--
branch : feature

--- a/src/app/valentina/dialogs/dialogfinalmeasurements.ui
+++ b/src/app/valentina/dialogs/dialogfinalmeasurements.ui
@@ -102,7 +102,7 @@
       <bool>true</bool>
      </attribute>
      <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
+      <bool>true</bool>
      </attribute>
      <attribute name="verticalHeaderCascadingSectionResizes">
       <bool>false</bool>
