--- a/src/app/valentina/share/resources/toolicon.qrc
+++ b/src/app/valentina/share/resources/toolicon.qrc
@@ -82,5 +82,7 @@
         <file>toolicon/32x32/pin@2x.png</file>
         <file>toolicon/32x32/insert_node.png</file>
         <file>toolicon/32x32/insert_node@2x.png</file>
+        <file>toolicon/32x32/place_label@2x.png</file>
+        <file>toolicon/32x32/place_label.png</file>
     </qresource>
 </RCC>
