--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -41,6 +41,7 @@
         <file>schema/pattern/v0.6.4.xsd</file>
         <file>schema/pattern/v0.6.5.xsd</file>
         <file>schema/pattern/v0.6.6.xsd</file>
+        <file>schema/pattern/v0.7.0.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
