--- a/src/libs/vmisc/share/resources/icon.qrc
+++ b/src/libs/vmisc/share/resources/icon.qrc
@@ -75,5 +75,7 @@
         <file>icon/32x32/pins@2x.png</file>
         <file>icon/32x32/passmark.png</file>
         <file>icon/32x32/passmark@2x.png</file>
+        <file>icon/32x32/button.png</file>
+        <file>icon/32x32/button@2x.png</file>
     </qresource>
 </RCC>
