--- a/src/app/valentina/share/resources/toolicon.qrc
+++ b/src/app/valentina/share/resources/toolicon.qrc
@@ -84,5 +84,7 @@
         <file>toolicon/32x32/insert_node@2x.png</file>
         <file>toolicon/32x32/place_label@2x.png</file>
         <file>toolicon/32x32/place_label.png</file>
+        <file>toolicon/32x32/duplicate_detail.png</file>
+        <file>toolicon/32x32/duplicate_detail@2x.png</file>
     </qresource>
 </RCC>
