--- a/src/app/valentina/share/resources/cursor.qrc
+++ b/src/app/valentina/share/resources/cursor.qrc
@@ -86,5 +86,7 @@
         <file>cursor/insert_node_cursor@2x.png</file>
         <file>cursor/place_label_cursor@2x.png</file>
         <file>cursor/place_label_cursor.png</file>
+        <file>cursor/duplicate_detail_cursor.png</file>
+        <file>cursor/duplicate_detail_cursor@2x.png</file>
     </qresource>
 </RCC>
